add validate test